dev/vpc/vpc.tf
resource "aws_vpc" "vpc_dev" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"
}
